--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
+.App{
+  margin: 0px;
+  min-height: 100vh;
+  /* background-image: linear-gradient(86deg, #e100ff 10%, #21acfd 100%); */
+  background-image: linear-gradient(125deg, #7700ff, #21acfd,#2980B9,#E4FFCD);  
+  background-size: 600%;
+  animation: bganimation 10s infinite;
+}
+
+
+@keyframes bganimation {
+  0%{
+    background-position: 0% 50%;
+  }
+  50%{
+    background-position: 100% 50%;
+  }
+  100%{
+    background-position: 0% 50%;
+  }
+}
+
+.header{
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header h1, h3{
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0.2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-form{
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar{
+  width: 50%;
+  border: none;
+  padding: 10px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.search-button{
+  background: #e100ff;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.recipes{
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+@media (max-width:680px) {
+  .recipes{
+    grid-template-columns: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
